Fixed font weight for navlinks so they are more readable on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ h2 {
 .nav-link {
     font-size: 1.2rem;
     font-family: 'Montserrat';
-    font-weight: lighter;
+    font-weight: normal;
 }
 
 
